--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ repositories {
 }
 
 micronaut {
+    version '3.0.0'
     runtime("netty")
     testRuntime("junit5")
     processing {
@@ -25,6 +26,8 @@ dependencies {
     implementation 'io.micronaut:micronaut-runtime'
     implementation 'io.micronaut:micronaut-management'
     implementation 'io.micronaut.micrometer:micronaut-micrometer-core'
+    implementation "io.micronaut.sql:micronaut-jdbc-hikari"
+    implementation "com.h2database:h2"
     implementation 'org.jobrunr:jobrunr-micronaut-feature:1.0.0-SNAPSHOT'
 
     runtimeOnly 'ch.qos.logback:logback-classic'
