--- a/build.gradle
+++ b/build.gradle
@@ -26,12 +26,15 @@ dependencies {
     implementation 'io.micronaut:micronaut-runtime'
     implementation 'io.micronaut:micronaut-management'
     implementation 'io.micronaut.micrometer:micronaut-micrometer-core'
-    implementation 'org.jobrunr:jobrunr-micronaut-feature:1.0.0-SNAPSHOT'
+    implementation 'org.jobrunr:jobrunr-micronaut-feature:4.0.0'
 
     runtimeOnly 'ch.qos.logback:logback-classic'
     compileOnly 'org.graalvm.nativeimage:svm'
 
     implementation 'io.micronaut:micronaut-validation'
+
+    testImplementation 'org.awaitility:awaitility'
+    testImplementation 'org.assertj:assertj-core'
 }
 
 
