--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,18 @@
 plugins {
-    id("com.github.johnrengelman.shadow") version "7.0.0"
-    id("io.micronaut.application") version "2.0.3"
+    id("com.github.johnrengelman.shadow") version "8.1.1"
+    id("io.micronaut.application") version "4.1.2"
 }
 
 version = "0.1"
 group = "org.jobrunr.examples"
 
 repositories {
-    mavenCentral()
     mavenLocal()
+    mavenCentral()
 }
 
 micronaut {
-    version '3.0.0'
+    version '4.1.6'
     runtime("netty")
     testRuntime("junit5")
     processing {
@@ -25,13 +25,18 @@ dependencies {
     implementation 'io.micronaut:micronaut-http-client'
     implementation 'io.micronaut:micronaut-runtime'
     implementation 'io.micronaut:micronaut-management'
-    implementation 'io.micronaut.micrometer:micronaut-micrometer-core'
-    implementation 'org.jobrunr:jobrunr-micronaut-feature:4.0.0'
+    implementation 'com.h2database:h2'
+    implementation 'io.micronaut:micronaut-jackson-databind'
+    implementation 'org.jobrunr:jobrunr-micronaut-feature:6.3.2'
 
+    runtimeOnly "io.micronaut.sql:micronaut-jdbc-hikari"
+    implementation 'io.micronaut.data:micronaut-data-tx'
+
+    runtimeOnly 'org.yaml:snakeyaml'
     runtimeOnly 'ch.qos.logback:logback-classic'
     compileOnly 'org.graalvm.nativeimage:svm'
 
-    implementation 'io.micronaut:micronaut-validation'
+    implementation 'io.micronaut.validation:micronaut-validation'
 
     testImplementation 'org.awaitility:awaitility'
     testImplementation 'org.assertj:assertj-core'
@@ -42,9 +47,6 @@ application {
     mainClass.set("org.jobrunr.examples.Application")
 }
 java {
-    sourceCompatibility = JavaVersion.toVersion("1.8")
-    targetCompatibility = JavaVersion.toVersion("1.8")
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
 }
-
-
-
