--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,10 +4,10 @@ micronaut:
   metrics:
     enabled: true
 
-#datasources:
-#  default:
-#    url: jdbc:h2:file:/tmp/default
-#    driverClassName: org.h2.Driver
+datasources:
+  default:
+    url: jdbc:h2:file:/tmp/default
+    driverClassName: org.h2.Driver
 
 #mongodb:
 #  servers.*.uuid-representation: STANDARD
@@ -20,12 +20,14 @@ micronaut:
 #  httpHosts: http://127.0.0.1:9200
 
 jobrunr:
-  job-scheduler:
-    enabled: true
   background-job-server:
-    enabled: true
+    enabled: ${JOBRUNR_JOBS:false}
   dashboard:
     enabled: true
+  job-scheduler:
+    enabled: true
+  jobs:
+    retry-back-off-time-seed: 2
 
 endpoints:
   health:
